--- a/src/launcher.html
+++ b/src/launcher.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Guild Wars2 Unofficial Beta Launcher</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="styles/launcher.css">
   </head>
   <body>
   	<!-- Background video -->
 	<video playsinline autoplay loop>
-	  <source src="./background.mp4" type="video/mp4">
+	  <source src="./assets/background.mp4" type="video/mp4">
 	</video>
 
 	<!-- The form for the login information -->
@@ -38,7 +38,7 @@
 
 	<!-- Load in the actual application code -->
 	<script type="text/javascript">
-		require('./browser.js')
+		require('./scripts/launcher.js')
 	</script>
   </body>
 </html>
