Add disclaimer and choosing file path

--- a/src/launcher.html
+++ b/src/launcher.html
@@ -16,7 +16,7 @@
 	<div class="login-form">
 		<div class="row">
 			<span class="label shadow-text">Account Name:</span>
-			<input type="text" id="login-name" autofocus tabindex="1">
+			<input type="text" id="login-name" tabindex="1">
 			<input type="submit" value="Log In" class="login-button" tabindex="3">
 		</div>
 		<div class="row">
