--- a/src/disclaimer.html
+++ b/src/disclaimer.html
@@ -6,8 +6,13 @@
 	<link rel="stylesheet" type="text/css" href="styles/executable.css">
   </head>
   <body>
-  	<h1>This is going to be the disclaimer text.</h1>
-  	<a href="#" class="confirm-button">I understand</a>
+  	<h1>
+        This is an inofficial launcher created for nostalgic reasons.<br>
+        It is not affiliated with ArenaNet in any way, shape or form.<br>
+        All content is property of ArenaNet / NCSOFT.<br>
+        There will be no support if things break at some point.
+    </h1>
+  	<a href="#" class="confirm-button">I understand, let's go already!</a>
 
 	<!-- Load in the actual application code -->
 	<script type="text/javascript">
