--- a/src/executable.html
+++ b/src/executable.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="styles/executable.css">
   </head>
   <body>
-    <h1>Please choose the path of your Guild Wars 2 launcher.</h1>
-  	<a href="#" class="confirm-button">Choose executable</a>
+    <h1>Could not find your Guild Wars 2 launcher, please choose it below.</h1>
+  	<a href="#" class="confirm-button">Choose launcher</a>
 
 	<!-- Load in the actual application code -->
 	<script type="text/javascript">
