Fix screen flickering on mac, add background patching

--- a/src/launcher.html
+++ b/src/launcher.html
@@ -17,7 +17,7 @@
 		<div class="row">
 			<span class="label shadow-text">Account Name:</span>
 			<input type="text" id="login-name" tabindex="1">
-			<input type="submit" value="Log In" class="login-button" tabindex="3">
+			<input type="submit" value="Log In" class="login-button" tabindex="3" disabled="disabled">
 		</div>
 		<div class="row">
 			<span class="label shadow-text">Password:</span>
@@ -31,6 +31,11 @@
 			<input type="checkbox" id="login-remember-password">
 			<label class="shadow-text" for="login-remember-password">Remember Password</label>
 		</div>
+	</div>
+
+	<!-- The text for patch status -->
+	<div class="patch-text">
+		Checking patch status...
 	</div>
 
 	<!-- The close button -->
