Clearer executable selection / back button

--- a/src/executable.html
+++ b/src/executable.html
@@ -6,8 +6,15 @@
 	<link rel="stylesheet" type="text/css" href="styles/executable.css">
   </head>
   <body>
-    <h1>Could not find your Guild Wars 2 launcher, please choose it below.</h1>
+    <h1>
+        Oh no!<br>
+        We could not find your official Guild Wars 2 launcher.<br>
+        Please click the button below and choose your<br>
+        <code>gw2.exe</code>, <code>gw2-64.exe</code> or <code>Guild Wars 2.app</code>
+    </h1>
   	<a href="#" class="confirm-button">Choose launcher</a>
+
+    <a href="./launcher.html" class="back-button">Back without changing</a>
 
 	<!-- Load in the actual application code -->
 	<script type="text/javascript">
