--- a/src/launcher.html
+++ b/src/launcher.html
@@ -38,7 +38,8 @@
 
 	<!-- The text for patch status -->
 	<div class="patch-text">
-		Checking patch status...
+		<span class="patch-status">Checking patch status...</span><br>
+		<a href="./executable.html">Change the path to the official gw2 launcher</a>
 	</div>
 
 	<!-- The close button -->
